cmake_minimum_required (VERSION 3.15.4)

project(lua)

set(BUILD_TARGET_ROOT_DIR "${PROJECT_SOURCE_DIR}/target")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${BUILD_TARGET_ROOT_DIR}/lib_d/")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${BUILD_TARGET_ROOT_DIR}/lib/")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${BUILD_TARGET_ROOT_DIR}/bin_d/")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${BUILD_TARGET_ROOT_DIR}/bin/")

add_subdirectory(lua-5.3.5)
