set(library_source
    "src/lapi.c"
    "src/lauxlib.c"
    "src/lbaselib.c"
    "src/lbitlib.c"
    "src/lcode.c"
    "src/lcorolib.c"
    "src/lctype.c"
    "src/ldblib.c"
    "src/ldebug.c"
    "src/ldo.c"
    "src/ldump.c"
    "src/lfunc.c"
    "src/lgc.c"
    "src/linit.c"
    "src/liolib.c"
    "src/llex.c"
    "src/lmathlib.c"
    "src/lmem.c"
    "src/loadlib.c"
    "src/lobject.c"
    "src/lopcodes.c"
    "src/loslib.c"
    "src/lparser.c"
    "src/lstate.c"
    "src/lstring.c"
    "src/lstrlib.c"
    "src/ltable.c"
    "src/ltablib.c"
    "src/ltm.c"
    "src/lundump.c"
    "src/lutf8lib.c"
    "src/lvm.c"
    "src/lzio.c"
# HEAD
    "src/lapi.h"
    "src/lcode.h"
    "src/lctype.h"
    "src/ldebug.h"
    "src/ldo.h"
    "src/lfunc.h"
    "src/lgc.h"
    "src/llex.h"
    "src/llimits.h"
    "src/lmem.h"
    "src/lobject.h"
    "src/lopcodes.h"
    "src/lparser.h"
    "src/lprefix.h"
    "src/lstate.h"
    "src/lstring.h"
    "src/ltable.h"
    "src/ltm.h"
    "src/lundump.h"
    "src/lvm.h"
    "src/lzio.h"
    "src/lauxlib.h"
    "src/lua.h"
    "src/lua.hpp"
    "src/luaconf.h"
    "src/lualib.h"
)
add_library(liblua_static STATIC ${library_source})
set(liblua_static_include "${CMAKE_CURRENT_SOURCE_DIR}/src")
target_include_directories(liblua_static PUBLIC ${liblua_static_include})

set(lua_source ${library_source} "src/lua.c")
add_executable (lua ${lua_source})

set(luac_source ${library_source} "src/luac.c")
add_executable (luac ${luac_source})
